force-app/main/default/objects/VG_Taxes__c/VG_Taxes__c.object-meta.xml
<CustomObject>
    <label>Taxes</label>
    <nameField>
        <label>Tax Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Taxes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>