force-app/main/default/objects/VG_Taxes__c/fields/VG_Override__c.field-meta.xml
<CustomField>
    <fullName>VG_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override</label>
    <type>Checkbox</type>
</CustomField>