force-app/main/default/objects/VG_Taxes__c/fields/VG_Policy_Schedule__c.field-meta.xml
<CustomField>
    <fullName>VG_Policy_Schedule__c</fullName>
    <label>Policy Schedule</label>
    <referenceTo>Policy_Schedule__c</referenceTo>
    <relationshipLabel>Taxes</relationshipLabel>
    <relationshipName>Taxes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>