force-app/main/default/objects/VG_Taxes__c/fields/VG_Tax_Administered_By__c.field-meta.xml
<CustomField>
    <fullName>VG_Tax_Administered_By__c</fullName>
    <label>Tax Administered By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Insured</fullName>
            </value>
            <value>
                <fullName>Insurer</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>