force-app/main/default/objects/VG_Taxes__c/fields/VG_Tax_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>VG_Tax_Jurisdiction__c</fullName>
    <label>Tax Jurisdiction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>DK</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>AU</fullName>
            </value>
            <value>
                <fullName>Poland</fullName>
            </value>
            <value>
                <fullName>Argentina</fullName>
            </value>
            <value>
                <fullName>Australia - Northern Territory (NT)</fullName>
            </value>
            <value>
                <fullName>Australia - Western Territory (WA)</fullName>
            </value>
            <value>
                <fullName>Australia - New South Wales (NSW)</fullName>
            </value>
            <value>
                <fullName>Australia - South Australia (SA)</fullName>
            </value>
            <value>
                <fullName>Australia - Queensland (QLD)</fullName>
            </value>
            <value>
                <fullName>Australia - Victoria (VIC)</fullName>
            </value>
            <value>
                <fullName>Australia - Tasmania (TAS)</fullName>
            </value>
            <value>
                <fullName>Australia - Australian Capital Territory (ACT)</fullName>
            </value>
            <value>
                <fullName>Australia - Jervis Bay Territory (JBT)</fullName>
            </value>
            <value>
                <fullName>Bonaire</fullName>
            </value>
            <value>
                <fullName>Brazil</fullName>
            </value>
            <value>
                <fullName>Canada - Alberta (AB)</fullName>
            </value>
            <value>
                <fullName>Canada - British Columbia (BC)</fullName>
            </value>
            <value>
                <fullName>Canada - NewFoundland and Labrador (NL)</fullName>
            </value>
            <value>
                <fullName>Canada - Northwest Territories (NT)</fullName>
            </value>
            <value>
                <fullName>Canada - Nunavut (NU)</fullName>
            </value>
            <value>
                <fullName>Canada - Manitoba (MB)</fullName>
            </value>
            <value>
                <fullName>Canada - New Brunswick (NB)</fullName>
            </value>
            <value>
                <fullName>Canada - Nova Scotia (NS)</fullName>
            </value>
            <value>
                <fullName>Canada - Ontario (ON)</fullName>
            </value>
            <value>
                <fullName>Canada - Prince Edward Island (PE)</fullName>
            </value>
            <value>
                <fullName>Canada - Quebec (QC)</fullName>
            </value>
            <value>
                <fullName>Canada - Saskatchewan (SK)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>