force-app/main/default/objects/VG_Taxes__c/fields/VG_Tax_Percent__c.field-meta.xml
<CustomField>
    <fullName>VG_Tax_Percent__c</fullName>
    <label>Tax (%)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>