force-app/main/default/objects/VG_Taxes__c/fields/VG_Tax_Type__c.field-meta.xml
<CustomField>
    <fullName>VG_Tax_Type__c</fullName>
    <label>Tax Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Turnover Tax</fullName>
            </value>
            <value>
                <fullName>Consorcio Winding Up Fund</fullName>
            </value>
            <value>
                <fullName>Consumption Tax (ISC)</fullName>
            </value>
            <value>
                <fullName>Consumption Tax [ISC]</fullName>
            </value>
            <value>
                <fullName>Contributions Liberation Economique</fullName>
            </value>
            <value>
                <fullName>Excise Tax</fullName>
            </value>
            <value>
                <fullName>Federal Excise Tax</fullName>
            </value>
            <value>
                <fullName>Financial Transaction Tax</fullName>
            </value>
            <value>
                <fullName>Foreign Currency Exchange Tax</fullName>
            </value>
            <value>
                <fullName>Foreign Exchange Fee</fullName>
            </value>
            <value>
                <fullName>FSB Supervisory Levy</fullName>
            </value>
            <value>
                <fullName>Goods and Services Tax</fullName>
            </value>
            <value>
                <fullName>Government Levy</fullName>
            </value>
            <value>
                <fullName>Income Tax</fullName>
            </value>
            <value>
                <fullName>Insurance Act Charge</fullName>
            </value>
            <value>
                <fullName>Insurance Compensation Fund Levy</fullName>
            </value>
            <value>
                <fullName>Insurance Employees Pension Fund</fullName>
            </value>
            <value>
                <fullName>Insurance Employees Pension Fund [Life]</fullName>
            </value>
            <value>
                <fullName>Insurance Institute Levy</fullName>
            </value>
            <value>
                <fullName>Insurance Levy</fullName>
            </value>
            <value>
                <fullName>Insurance Premium Tax</fullName>
            </value>
            <value>
                <fullName>Insurance Premium Tax [Fidelity]</fullName>
            </value>
            <value>
                <fullName>Insurance Premium Tax [Licenced Insurer]</fullName>
            </value>
            <value>
                <fullName>Insurance Premium Tax [Local Intermediary]</fullName>
            </value>
            <value>
                <fullName>Insurance Premium Tax [No Alberta Special Broker]</fullName>
            </value>
            <value>
                <fullName>Insurance Premium Tax [Unlicenced Insurer]</fullName>
            </value>
            <value>
                <fullName>Insurance Premium Tax [Unlicenced Insurer &amp; Special Broker]</fullName>
            </value>
            <value>
                <fullName>Insurance Premium Tax 2.5%</fullName>
            </value>
            <value>
                <fullName>Insurance Premium Tax 5%</fullName>
            </value>
            <value>
                <fullName>Insurance Regulatory Levy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>