force-app/main/default/objects/VG_Taxes__c/fields/VG_Taxable_Amount__c.field-meta.xml
<CustomField>
    <fullName>VG_Taxable_Amount__c</fullName>
    <label>Taxable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>